rollouts/layer-1-application.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
  name: layer-1
  labels:
    app: layer-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: layer-1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: layer-1
        deployment: layer-1
    spec:
      containers:
        - name: layer-1
          image: 'image-registry.openshift-image-registry.svc:5000/rollouts/layers:fixed-v1'
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
