rollouts/layer-1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: layer-1
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: layer-1
