rollouts/layer-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: layer-2
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: rollout-canary-layer-2
